Added JsonString <=> Pojo example
Conflicts:
	src/main/java/it/okkam/datalinks/batch/flink/datasourcemanager/importers/Csv2RowExample.java

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
 
 
 	<properties>
-		<flink.version>1.2.1</flink.version>
+		<flink.version>1.6.2</flink.version>
+		<scala.version>2.11</scala.version>
 		<java.version>1.7</java.version>
 		<mongodb.hadoop.version>1.3.0</mongodb.hadoop.version>
 		<junit.version>4.10</junit.version>
@@ -17,22 +18,22 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-clients_2.10</artifactId>
+			<artifactId>flink-clients_${scala.version}</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-connector-elasticsearch2_2.10</artifactId>
+			<artifactId>flink-connector-elasticsearch2_${scala.version}</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-connector-kafka-0.10_2.10</artifactId>
+			<artifactId>flink-connector-kafka-0.10_${scala.version}</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-streaming-java_2.10</artifactId>
+			<artifactId>flink-streaming-java_${scala.version}</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
 		
@@ -45,7 +46,7 @@
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-table_2.10</artifactId>
+			<artifactId>flink-table_${scala.version}</artifactId>
 			<version>${flink.version}</version>
 			<exclusions>
 				<exclusion>
