--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 
 		<!-- Parquet dependencies -->
 		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-avro</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.parquet</groupId>
 			<artifactId>parquet-avro</artifactId>
 			<version>1.9.0</version>
