--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 
 	<properties>
-		<flink.version>1.6.2</flink.version>
+		<flink.version>1.7.2</flink.version>
 		<scala.version>2.11</scala.version>
 		<java.version>1.8</java.version>
 		<mongodb.hadoop.version>1.3.0</mongodb.hadoop.version>
@@ -34,6 +34,20 @@
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_${scala.version}</artifactId>
 			<version>${flink.version}</version>
+		</dependency>
+
+		<!-- Enable queryable state -->
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-queryable-state-runtime_${scala.version}</artifactId>
+			<version>${flink.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-queryable-state-client-java_${scala.version}</artifactId>
+			<version>${flink.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Parquet dependencies -->
