--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<java.version>1.8</java.version>
 		<mongodb.hadoop.version>1.3.0</mongodb.hadoop.version>
 		<junit.version>4.12</junit.version>
+		<avro.version>1.8.2</avro.version>
 	</properties>
 	<dependencies>
 		<dependency>
